--- a/rhenn/public/arpg/index.html
+++ b/rhenn/public/arpg/index.html
@@ -37,7 +37,10 @@
     </nav>
     
             <div id="main">
+                <h2>Arpg</h2>
                 
+<p>Description goes here.<br>
+ML image should be named something generic like &ldquo;esk&rdquo;</p>
 
 
 <p>
@@ -45,7 +48,6 @@
     <br>
 </p>
   
-  <p>This is an index template for (presumably) all content types</p>
   
             </div>
             <footer>
