--- a/rhenn/public/reviews/witch-king/index.html
+++ b/rhenn/public/reviews/witch-king/index.html
@@ -5,6 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="/css/main.css">
+<link rel="alternate"
+      type="application/rss+xml"
+      href="http://rhenn.neocities.org/index.xml"
+      title="Updates from Ateli-weird">
+
+
 <title>Witch King</title>
 
 </head>    
@@ -34,7 +40,8 @@
         
         </nav>
         <hr>
-        <p>Banner coming soon!</p>
+        <img alt="ateliweird banner" src="/img/aw_88x31.png">
+<br>
 
 <img id="panel-img" src="/img/littleguy.png">
 
@@ -58,7 +65,7 @@
             </div>
             <footer>
     Site created using <a href="https://gohugo.io">Hugo</a>. Background images are paintings by <a href="https://en.wikipedia.org/wiki/J._C._Leyendecker">
-        J.C.Leyendecker.</a>
+        J.C.Leyendecker.</a> | <a href="/index.xml">RSS</a>
 </footer>
         </main>
     </div>
