--- a/rhenn/public/404.html
+++ b/rhenn/public/404.html
@@ -5,6 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="/css/main.css">
+<link rel="alternate"
+      type="application/rss+xml"
+      href="http://rhenn.neocities.org/index.xml"
+      title="Updates from Ateli-weird">
+
+
 <title>404 Page not found</title>
 
 </head>    
@@ -49,7 +55,7 @@
             </div>
             <footer>
     Site created using <a href="https://gohugo.io">Hugo</a>. Background images are paintings by <a href="https://en.wikipedia.org/wiki/J._C._Leyendecker">
-        J.C.Leyendecker.</a>
+        J.C.Leyendecker.</a> | <a href="/index.xml">RSS</a>
 </footer>
         </main>
     </div>
