--- a/rhenn/public/reviews/index.html
+++ b/rhenn/public/reviews/index.html
@@ -5,6 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="/css/main.css">
+<link rel="alternate"
+      type="application/rss+xml"
+      href="http://rhenn.neocities.org/index.xml"
+      title="Updates from Ateli-weird">
+
+
 <title>Book Reviews</title>
 
 </head>    
@@ -34,7 +40,8 @@
         
         </nav>
         <hr>
-        <p>Banner coming soon!</p>
+        <img alt="ateliweird banner" src="/img/aw_88x31.png">
+<br>
 
 <img id="panel-img" src="/img/littleguy.png">
 
@@ -53,11 +60,36 @@
 <hr>
 
 
+<p>Bear, Elizabeth</p>
+<ul style="list-style-type: none;">
+
+<li>
+    ★★★★☆&nbsp;<a class="font-125" href="/reviews/the-eternal-sky-trilogy/">The Eternal Sky Trilogy</a>
+    <br>
+</li>
+  
+</ul>
+  
 <p>Bujold, Lois McMaster</p>
 <ul style="list-style-type: none;">
 
 <li>
     ★★★☆☆&nbsp;<a class="font-125" href="/reviews/the-vorkosigan-saga/">The Vorkosigan Saga</a>
+    <br>
+</li>
+  
+</ul>
+  
+<p>Leckie, Ann</p>
+<ul style="list-style-type: none;">
+
+<li>
+    ★★★★☆&nbsp;<a class="font-125" href="/reviews/provenance/">Provenance</a>
+    <br>
+</li>
+  
+<li>
+    ★★★★★&nbsp;<a class="font-125" href="/reviews/ancillary-justice/">Ancillary Justice (and sequels)</a>
     <br>
 </li>
   
@@ -103,7 +135,7 @@
             </div>
             <footer>
     Site created using <a href="https://gohugo.io">Hugo</a>. Background images are paintings by <a href="https://en.wikipedia.org/wiki/J._C._Leyendecker">
-        J.C.Leyendecker.</a>
+        J.C.Leyendecker.</a> | <a href="/index.xml">RSS</a>
 </footer>
         </main>
     </div>
